# pixel-analyzer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: publish.yml  static.yml
demo/: CHANGELOG.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
docs/: API.md  DETA.md  FRONTEND.md
src/: accessibility.rs  bindings.ts  color.rs  color_theory.rs  config.rs  decoder.rs  error.rs  kmeans.rs  lib.rs  metrics.rs  report.rs  sampler.rs  types.rs
tests/: accessibility.rs  color.rs  color_conversion.rs  config.rs  decoder.rs  error.rs  kmeans.rs  metrics.rs  report.rs  sampler.rs  wasm.rs
