[package]
name        = "pixel-analyzer"
version     = "0.1.3"
edition     = "2024"
authors     = ["pmartiamarista <pmartiamarista@gmail.com>"]
description = "High-performance WASM image palette extractor using CIELAB + K-Means++"
license     = "MIT"
repository  = "https://github.com/pmartiamarista/pixel-analyzer"
homepage    = "https://github.com/pmartiamarista/pixel-analyzer"
keywords    = ["wasm", "image", "color", "palette", "cielab"]
categories  = ["wasm", "multimedia::images"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen         = "=0.2.118"
wasm-bindgen-futures = "=0.4.68"
js-sys               = "=0.3.95"

serde              = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp"] }

console_error_panic_hook = { version = "0.1.7", optional = true }

getrandom = { version = "0.2.15", features = ["js"] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
