[package]
name        = "pixel-analyzer"
version     = "0.1.7"
edition     = "2024"
authors     = ["pmartiamarista <pmartiamarista@gmail.com>"]
description = "High-performance WASM image palette extractor using CIELAB + K-Means++"
license     = "MIT"
repository  = "https://github.com/pmartiamarista/pixel-analyzer"
homepage    = "https://github.com/pmartiamarista/pixel-analyzer"
keywords    = ["wasm", "image", "color", "palette", "cielab"]
categories  = ["wasm", "multimedia::images"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen         = "=0.2.118"
wasm-bindgen-futures = "=0.4.68"
js-sys               = "=0.3.95"

serde              = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

png        = "0.18"
zune-jpeg  = "0.5"
image-webp = "0.2"

console_error_panic_hook = { version = "0.1.7", optional = true }

getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
